--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,47 +1,26 @@
+
+
 <h4>Messages</h4>
 
-      <%= form_tag move_all_to_trash_recipient_messages_path, :method => :put do %>
-<% @messages.each do |message| %>
-   <%# raise message.message_id.inspect%>
-    
-    <%#= check_box_tag "message_ids[]", message.id %>
-    
-
-
+ <%= form_tag move_all_to_trash_recipient_messages_path, :method => :put do %>
+  <% @messages.each do |message| %>
     <%if (message.message_id == nil) || (message.message_id == message.post_id)%>
-    <!-- <div><%#= message.sender.email %></div> -->
     <div><br>
     <img src="assets/thumb_profile.jpg" alt="">
-     <%= message.sender.name %><p>
-    Subject: 
-      <% if message.is_read %>
-      <%= link_to message.subject , message , :class => "bluelink" %>
-      <% else %>
-      <b><%= link_to message.subject , message , :class => "bluelink" %></b>
-      <% end %>
-   </div>
-   <!--  <div>Message:<%#= message.body.html_safe %></div> -->
-   <% end %>
-
-
-   <!--  <ul class="action"> -->
-<!-- s -->
-    <%# if message.is_read %>
- <!--    <li><a href=""><img src="mail_read.png" alt="" border="0"></a></li> -->
-    <%# end %>
-    <!-- <li><%#= link_to image_tag("delete.png"), trash_message_path(message),method: :post, data: { confirm: 'Move To Trash?' } %></li> -->
-    
-  <!--   </ul> -->
-    
-<% end %>
-
-  
-
-    
-<!--     <div class="message">
-
-    <div style="float:right">  <%#= submit_tag "Move To Trash", :class=> "submit_btn"  %>  </div>
-    
-    </div> -->
+      <a class="submit_btn" style="margin:0" href="<%= reply_message_path(message)%>"><%= message.sender.name%></a><p>
+     Subject: 
+     <% if message.is_read %>
+      <%= message.subject  %>
+     <% else %>
+     <b><%= message.subject  %></b>
+     <% end %>
+    </div>
     <% end %>
+   <% end %>
+<% end %>
   
+
+
+
+
+
