--- a/app/views/messages/reply.html.erb
+++ b/app/views/messages/reply.html.erb
@@ -1,68 +1,18 @@
 
+ <div style="width:40%;"><h4>Message</h4></div>
 
-    
-        <div class="container_20">
-        
-        
-        <div class="grid_20 title">
-    
- 
-  
+<p id="notice"><%= notice %></p>
+<br>
 
-    
-    </div>
-    
-  
-    
-    <div class="grid_16" style="margin-bottom:10px;">
-  
+<p>
+  <b>Subject</b>: <%= @messageee.subject %><br/><br/>
+    <% msg1 = [] %>
+      <% @msgs.each do |i| %>
+      <b> <%= i.sender.name %> </b>:
+          <%= i.body %><br/>
+          <% msg1 << i.id%>
+      <% end %>
 
-<%= form_for(@message) do |f| %>
+</p>
 
-    <%= f.hidden_field :subject, :value =>  @messagee.subject_name(@messagee.subject) %>
-
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body,:onblur =>"checkTextField(this);" %>
-  </div>
-    <%= hidden_field_tag :message_id,@messagee.id  %>
-    <%#= hidden_field_tag :post_id,@messagee.id%>
-    <%= hidden_field_tag :post_id,@messagee.post_id  %>
-<%# raise @messagee.sender.id.inspect %>
-  <%= hidden_field_tag :recipient_id, @messagee.sender.id  %>
-
-  <%= hidden_field_tag :reply,  "reply"  %>
-  <div class="actions">
-    <%= f.submit "Reply"  %>
-  </div>
-<% end %>
-
- <script>
-// window.onload = function() {
-//   document.getElementById("message_body").focus();
-// };
-
-// function checkTextField(field)
-// {
-// var n = document.getElementById("message_body").value
-//   if (n.length < 1){
-// confirm("Send message without body");
-// }
-
-// }
-// </script>
-
-    
-
-    </div>
-        
-    
-        
-    
- </div>
-    
-
-
-
-
-
+<%= render 'reply'%>
