--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+
 <table width="100%">
 <tr>
 	<td><%= image_tag(@post.photo.url(:medium)) %> <br/>
@@ -6,8 +7,35 @@
 		<strong>Drop-Off Avaibilty Date : </strong><%= @post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= @post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %><br/>
 		<strong>Pick-Up : </strong> <%= @post.price_include_pick_up %> <br/>
 		<strong>Drop-Off : </strong> <%= @post.price_include_drop_off %> <br/>
-
+     <%= search_average_stars(@post) %>
 	</td>
 	<td></td>
 </tr>
 </table>
+
+      <h3>Post your comment</h3>
+   <%= form_for [@post, Comment.new] do |f| %>
+<p>Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= f.text_field :name %><br>
+   Comment:<%= f.text_area :comments ,:cols=>"30", :rows=>"4" %>
+   <div class="control-group">
+    <%= f.label :stars, :class => 'control-label' %>
+    <% Comment::STARS.each do |star| %>
+     <span class="star">
+       <%= f.radio_button :stars, star %> <%= star %>
+    </span>
+     <% end %>
+  </div>
+ <p ><%= f.submit "Add comment", :class => 'btn btn-info' %></p>
+  <% end %>
+
+
+  <b><%= @comments.count %></b> Comments<br>
+<% @comments.each do |comment| %>
+Posted by <strong><%= comment.name rescue nil %></strong>, at <time><%= comment.created_at%><br>
+<%= comment.comments %><br>
+<%#= pluralize(comment.stars, 'star') %>
+
+<%end%>
+
+
+
