--- a/app/views/home/customer_weekly_report.html.erb
+++ b/app/views/home/customer_weekly_report.html.erb
@@ -1,26 +1,25 @@
 
 <% if signed_in? && current_user.admin? %>
- <h4>Search by</h4>
+
   <%= form_tag search_path,:method=> :get do %>
   <%= text_field_tag :q, nil %>
-      <!-- <div class="span5"> -->
-                     <!-- <section id="buttons"> -->
-                       
-                          <select  onchange="location = this.options[this.selectedIndex].value;">
+   <select  onchange="location = this.options[this.selectedIndex].value;">
                             <option value="<%= root_path %>">All</option>
                             <option value="<%= home_customer_monthly_report_path %>">Month</option>
-                            <option value="<%= home_customer_weekly_report_path %>"> 
+                            <option value="<%= home_customer_weekly_report_path %>" selected="selected"> 
                             Weekly
                             </option>
                             <option value="<%= home_customer_daily_report_path%>">Daily
                             </option>
                      
                           </select>
-                     <!-- </section> -->
-                 <!-- </div> -->
   <%= submit_tag "Search"%> 
   <%end%>
-              
+                  <div  style="text-align:right;margin-left:10px;">
+          <a href="<%=  home_customer_weekly_report_path(params.merge(format: "xls")) %>" class="btn btn-secondary"><img src="/assets/excel.png" alt=""> Excel</a> 
+          <a href="<%= home_customer_weekly_report_path(params.merge(format: "pdf"))  %>" class="btn btn-secondary" target="_blank"><i class="icon"><img src="/assets/pdf.png" alt=""></i> PDF</a><br><br>
+          </div>
+           
   <table class="table table-bordered">
 
 	 <tr>
@@ -44,8 +43,3 @@
 <h1>Home Page</h1>
 
 <%end%>
-
- 
-
-<%= will_paginate @adminusers %>
-
