--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -1,4 +1,92 @@
-<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+<%#= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+
+<script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.8.1/jquery.validate.min.js"></script>
+ <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+ <script type="text/javascript">
+    Stripe.setPublishableKey('pk_test_utn2AL4PFviXeehaGbIJZ0oY');
+   $(document).ready(function() {
+
+    function addInputNames() {
+    // Not ideal, but jQuery's validate plugin requires fields to have names
+    // so we add them at the last possible minute, in case any javascript
+    // exceptions have caused other parts of the script to fail.
+      $(".card_number").attr("name", "card_number")
+      $(".card_code").attr("name", "card_code")
+      $(".card_year").attr("name", "card_year")
+    }
+ 
+    function removeInputNames() {
+      $(".card_number").removeAttr("name")
+      $(".card_code").removeAttr("name")
+      $(".card_year").removeAttr("name")
+      }
+ 
+      function submit(form) {
+      // remove the input field names for security
+      // we do this *before* anything else which might throw an exception
+      removeInputNames(); // THIS IS IMPORTANT!
+     
+      // given a valid form, submit the payment details to stripe
+      // https://stripe.com/docs/testing
+      $(form['submit-button']).attr("disabled", "disabled")
+     
+        Stripe.createToken({
+        number: $('.card_number').val(),
+        cvc: $('.card_code').val(),
+        exp_month: $('.card-expiry-month').val(),
+        exp_year: $('.card-expiry-year').val()
+        }, function(status, response) {
+        if (response.error) {
+        // re-enable the submit button
+        $(form['submit-button']).removeAttr("disabled")
+        // show the error
+        $(".payment-errors").html(response.error.message);
+        // we add these names back in so we can revalidate properly
+        addInputNames();
+        } else {
+        // token contains id, last4, and card type
+        var token = response['id'];
+     
+        // insert the stripe token
+        var input = $("<input name='stripe_card_token' value='" + token + "' style='display:none;' />");
+        form.appendChild(input[0])
+     
+          // and submit
+      form.submit();
+        }
+      });
+       return false;
+      }
+      // add custom rules for credit card validating
+      jQuery.validator.addMethod("cardNumber", Stripe.validateCardNumber, "Please re-enter number");
+      jQuery.validator.addMethod("cardCVC", Stripe.validateCVC, "Please re-enter CVV");
+      jQuery.validator.addMethod("cardExpiry", function() {
+      return Stripe.validateExpiry($(".card-expiry-month").val(),
+      $(".card-expiry-year").val())
+      }, "Please enter a valid expiration");
+ 
+      // We use the jQuery validate plugin to validate required params on submit
+      $("#new_bank_detail").validate({
+        submitHandler: submit,
+        rules: {
+        "card_code" : {
+          cardCVC: true,
+          required: true
+        },
+        "card_number" : {
+          cardNumber: true,
+          required: true
+        },
+        "card-expiry-year" : "cardExpiry" // we don't validate month separately
+        }
+        });
+ 
+        // adding the input field names is the last step, in case an earlier step errors
+       addInputNames();
+  });
+</script>
+
 <%= form_for(@bank_detail, :html=>{ id: "new_bank_detail" }) do |f| %>
   <% if @bank_detail.errors.any? %>
     <div id="error_explanation">
@@ -12,14 +100,50 @@
     </div>
   <% end %>
 
+  <span class="payment-errors"></span>
+  <%= hidden_field_tag :stripe_card_token %>
+
   <div class="field">
     <%= f.label :full_name %>
     <%= f.text_field :full_name %>
   </div>
+ 
   <div class="field">
-    <%= f.label :card_number %>
-    <%= f.text_field :card_number %>
+      <%= label_tag :card_number, "Debit Card Number " %>
+      <%= text_field_tag :card_number, nil,:autocomplete => "off", name: nil, :class=> "card_number stripe-sensitive required" %>
   </div>
+  <div class="field">
+      <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+      <%= text_field_tag :card_code, nil, name: nil, :autocomplete => :off, :class => "card_code stripe-sensitive required" %>
+  </div>
+
+  <div class="field">
+    <label for="card_month">Card Expiration</label>
+    <div class="expiry-wrapper">
+     <select class="card-expiry-month stripe-sensitive required">
+     </select>
+      <script type="text/javascript">
+       var select = $(".card-expiry-month"),
+       month = new Date().getMonth() + 1;
+       for (var i = 1; i <= 12; i++) {
+         select.append($("<option value='"+i+"' "+(month === i ? "selected" : "")+">"+i+"</option>"))
+        }
+      </script>
+      <span> / </span>
+      <select class="card-expiry-year stripe-sensitive required"></select>
+      <script type="text/javascript">
+        var select = $(".card-expiry-year"),
+        year = new Date().getFullYear();
+ 
+        for (var i = 0; i < 33; i++) {
+          select.append($("<option value='"+(i + year)+"' "+(i === 0 ? "selected" : "")+">"+(i + year)+"</option>"))
+        }
+      </script>
+    </div>
+  </div>
+  
+       <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
+
   <div class="actions">
     <%= f.submit :class=>"btn btn-primary" %>
     
