added featured in post

--- a/app/views/posts/_all_post.html.erb
+++ b/app/views/posts/_all_post.html.erb
@@ -1,18 +1,26 @@
     <% @posts.each_with_index do |post, index| %>
-      <tr>
+    
+        <tr>
         <td><%= index + 1 %></td>
         <td><%= post.id %></td>
         <td><%= post.price_sq_ft %></td>
-        <td><%= post.created_at.strftime("%d-%m-%Y") %></td>
-
+        <td><%= post.created_at.strftime("%d-%m-%Y") %></td> 
         <td><%= post.area %></td>
         <td>$<%= post.price_sq_ft %></td>
-
         <td><%= post.address %></td>
         <td><% if post.status == true %> Active <% else %> Deactive <% end %></td>
+        <% if user_signed_in? && signed_in? && current_user.admin?  %>
+
+      <% if post.featured == true %>
+     <td> <%= link_to 'Deactive', toggled_feature_post_path(post.id)%></td>
+      <% else %>
+      <td><%= link_to 'Activate', toggled_feature_post_path(post.id)%></td>
+      <% end %>
+   
+        <%else%>
         <td><%= link_to 'View Details', post_path(post) %>
         </td>
         <td><%= link_to "Send Message ", new_message_path(:user_id => post.user_id,:post_id => post.id ), :remote=>true %></td>
-        
+        <%end%> 
       </tr>
     <% end %>
