--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
     <li><%= link_to "Users", root_path%></li>
 
     <li><%= link_to "Pages", pages_path%></li>
-    <li><%= link_to "All Posts", all_posts_path %></li>
+    <li><%= link_to "All Posts", home_all_postings_path %></li>
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <%# end %>
   <% elsif user_signed_in? %>
