facebook return url

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "jquery.fancybox.pack.js" %>
+<%= stylesheet_link_tag "jquery.fancybox.css"%>
 
 <% if signed_in? && current_user.admin? %>
  <h4>Search by</h4>
@@ -39,8 +41,46 @@
 	<%end%>	
 
 	</table>
-<%= %>
+  <%elsif signed_in? %>
+
+<script type="text/javascript">
+jQuery(document).ready(function() {
+<% if request.remote_ip %>
 <% else %>
+jQuery("#various1").fancybox().trigger('click');
+<%end%>
+});
+</script>
+
+
+<a id="various1" href="#inline3" title="" ></a>
+<div style="display: none">
+<div id="inline3" style="width:400px; height:auto ; overflow:auto; text-align:left">
+<div>
+Please Select Your State and City
+<%#=form_for @user do |f|%>
+<table width="100%" border="0" cellspacing="10" cellpadding="0">
+<tr>
+<td align="right" valign="top">State :</td>
+<td align="left" valign="top">
+<%#= f.email_field :email%>
+</td>
+</tr>
+
+<tr>
+<td align="right" valign="top"><label>
+<%#= f.submit "Update" ,:class => "details" %>
+</label></td>
+</tr>
+</table>
+<%# end %>
+</div>
+</div>
+</div>
+
+<% else %>
+
+
 <h1>Home Page</h1>
 
 <%end%>
