--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,7 @@ jQuery(document).ready(function(){
         var qty = parseInt($('#area').val());
         var price = parseFloat($('#price').val());
         $('#total').val((qty * price ? qty * price : 0).toFixed(2));
+        $('#booking_price').val((qty * price ? qty * price : 0).toFixed(2));   
     }
 
 
@@ -27,17 +28,24 @@ jQuery(document).ready(function(){
 
        var qty = parseInt($('#area').val());
        var price = parseFloat($('#price').val());
-       var drop_off = parseFloat($('#dropoff').val());
+       var drop_off = 0;
+
+       if($('#checkbox1').is(":checked"))
+       {
+        var drop_off = parseFloat($('#dropoff').val());
+       }
 
        var total = parseFloat((qty * price ? qty * price : 0).toFixed(2));
 
         if($(this).is(":checked")) {
          
-          $('#total').val((total + drop_off));
+          $('#total').val((total + drop_off ? total + drop_off : 0).toFixed(2));
+          $('#booking_price').val((total + drop_off ? total + drop_off : 0).toFixed(2));
         }
         else
         {
-          $('#total').val(total);
+          $('#total').val((total + drop_off ? total + drop_off : 0).toFixed(2));
+          $('#booking_price').val((total + drop_off ? total + drop_off : 0).toFixed(2));
         }       
     });
 
@@ -91,6 +99,13 @@ jQuery(document).ready(function(){
     <input type='text' name='total' id='total' value='' />
 
 
+    
+    <%= form_for :booking, :url=>{:controller=>'bookings',:action=>'checkout'} do |f| %>
+      <%= f.hidden_field :user_id, :value => current_user.id %>
+      <%= f.hidden_field :price, :value => "" %>
+      <%= f.submit "Book", :class => "btn btn-primary contact-form"%>
+    <% end %>
+
   </td>
 
 </tr>
@@ -108,7 +123,7 @@ jQuery(document).ready(function(){
         <%= f.radio_button(:rating, "1") %><%= f.label(:rating.to_s + "_1") %>
        </fieldset><br><br><br>
    Comment:<%= f.text_area :comments ,:cols=>"30", :rows=>"4" %>
-   <p ><%= f.submit "Add comment", :class => 'btn btn-info' %></p>
+   <p ><%= f.submit "Add comment", :class => "btn btn-primary contact-form" %></p>
    <% end %>
 <% end %>
 
