--- a/app/views/home/customer_weekly_report.pdf.erb
+++ b/app/views/home/customer_weekly_report.pdf.erb
@@ -2,20 +2,20 @@
 
 <% if signed_in? && current_user.admin? %>
 
-  <table class="table table-bordered">
+<table cellpadding="10" cellspacing="0" border="1" class="table table-striped table-bordered">
 
 	 <tr>
 	 <th>Email </th>
-	 <th>View Details</th>
-	 <th>Delete</th>
-	 <th>Activate/Deactivate</th>
+	 <th>Name</th>
+	 <th>LAst Name</th>
+
 	 </tr>
 	<% @adminusers.each do |adminuser|%>
 	<tr>
 	 <td><%= adminuser.email %>
-	 <td><%= link_to "View Details",{:controller => 'users', :action => 'show', :id => adminuser.id}%></td>
-	 <td><%= link_to "Destroy",{:controller => 'users', :action => 'destroy', :id => adminuser.id}%></td>
-	 <td><%= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
+	 <td><%=adminuser.name%></td>
+	 <td><%= adminuser.last_name%></td>
+	 
 	 </tr>
 	<%end%>	
 
