--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+
 <%= form_for(@page) do |f| %>
   <% if @page.errors.any? %>
     <div id="error_explanation">
