--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -140,6 +140,6 @@ jQuery(document).ready(function(){
     <% num_stars(comment.rating)[:empty].times do %>
       <i class="fa fa-star-o"></i>
     <% end %>
-    <strong><%= comment.user.name %>&nbsp;<%= comment.user.last_name %></strong>&nbsp;<%= comment.created_at.strftime("%b %d,%Y") %><br><br>
+    <strong><%= comment.user.name rescue nil %>&nbsp;<%= comment.user.last_name rescue nil %></strong>&nbsp;<%= comment.created_at.strftime("%b %d,%Y") %><br><br>
     <%= comment.comments %><br><br>
     <%end%>
