Facebook integration completed

--- a/app/views/posts/all_posts.html.erb
+++ b/app/views/posts/all_posts.html.erb
@@ -40,6 +40,7 @@
   <thead>
     <tr>
       <th>Sr No.</th>
+      <th>UserName</th>
       <th>Post ID</th>
        <th>Price</th>
       <th>Post Date</th>
