--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -30,6 +30,6 @@
     <%= f.text_area :meta_description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-primary contact-form" %>
   </div>
 <% end %>
