--- a/app/views/users/new_user.html.erb
+++ b/app/views/users/new_user.html.erb
@@ -57,7 +57,7 @@
 
 
 <div class="form-group">
-<%= f.submit "Create user",:class=>"button button-primary", :style=>"margin-left: 18px;" %>
+<%= f.submit "Create user", :class => "btn btn-primary contact-form", :style=>"margin-left: 18px;" %>
 </div>
 </div>
 </fieldset>
