--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
                           </select>
                      <!-- </section> -->
                  <!-- </div> -->
-  <%= submit_tag "Search"%> 
+  <%= submit_tag "Search", :class => "btn btn-primary contact-form"%> 
   <%end%>
   <div>
   <%= link_to "Add new User",new_user_users_path%> 
