--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.menu_simple {
+    border : 1px solid black;
+    
+}
+.menu_simple ul {
+    margin: 0; 
+    padding: 0;
+    width:120px;
+    list-style-type: none;
+}
+
+.menu_simple ul li a {
+    text-decoration: none;
+    color: #333333; 
+    padding: 5px 5px;
+    background-color: #F6F6F6;
+    display:block;
+    border : 1px solid #A8A8A8;
+}
+ 
+.menu_simple ul li a.current {
+    color: #333333;
+    background-color: #DADADA;
+    border : 1px solid #A8A8A8;
+    margin-bottom:10cm;
+}
+ 
+.menu_simple ul li a:hover {
+    color: #333333;
+    background-color: #DADADA;
+}
