--- a/app/views/messages/_reply.html.erb
+++ b/app/views/messages/_reply.html.erb
@@ -1,41 +1,26 @@
+  <%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
 
-<%= form_for(@message) do |f| %>
+  <script type="text/javascript" src="http://js.nicedit.com/nicEdit-latest.js"></script> 
+  <%= form_for(@message,:html => {:id => "reply_message"}) do |f| %>
 
-    <%= f.hidden_field :subject, :value =>  @messagee.subject_name(@messagee.subject) %>
+      <%#= f.hidden_field :subject, :value =>  @messagee.subject_name(@messagee.subject) %>
+      <%= f.label :body %>
+      <%= f.text_area :body ,:id=>"area4"%>
+      <%#= hidden_field_tag :message_id,@messagee.id  %>
+      <%#= hidden_field_tag :post_id,@messagee.id%>
+      <%#= hidden_field_tag :post_id,@messagee.post_id  %>
+      <%# raise @messagee.sender.id.inspect %>
+      <%= hidden_field_tag :recipient_id, params[:recv_id] %>
 
-  <div class="field">
-    <%= f.label :body %>
-    <%= f.text_area :body,:onblur =>"checkTextField(this);" %>
-  </div>
-    <%= hidden_field_tag :message_id,@messagee.id  %>
-    <%#= hidden_field_tag :post_id,@messagee.id%>
-    <%= hidden_field_tag :post_id,@messagee.post_id  %>
-<%# raise @messagee.sender.id.inspect %>
-  <%= hidden_field_tag :recipient_id, @messagee.sender.id  %>
-
-  <%= hidden_field_tag :reply,  "reply"%>
-  <div class="actions">
-    <%= f.submit "Reply"  %>
-  </div>
-<% end %>
-
- <script>
-// window.onload = function() {
-//   document.getElementById("message_body").focus();
-// };
-
-// function checkTextField(field)
-// {
-// var n = document.getElementById("message_body").value
-//   if (n.length < 1){
-// confirm("Send message without body");
-// }
-
-// }
-// </script>
-
-    
-
-
-
-
+    <%= hidden_field_tag :reply,  "reply"%>
+    <div class="actions">
+      <%= f.submit "Reply"  %>
+    </div>
+  <% end %>
+  <script type="text/javascript">
+  bkLib.onDomLoaded(function() {
+   
+    new nicEditor({buttonList : ['bold','italic','underline','html','justify','left','center','right','justify','ol','ul']}).panelInstance('area4');
+   
+  });
+  </script>
