--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,25 +1,64 @@
+<% unless params[:recv_id].nil?%>
+<table style='border-spacing: 40px;border-collapse: separate;height:100%;'>
+	<tr><td valign='top'>
+	Users 
+		<div class="menu_simple">
+			<div id="user_msg"></div>
 
 
-<h4>Messages</h4>
+		</div>
 
- <%= form_tag move_all_to_trash_recipient_messages_path, :method => :put do %>
-  <% @messages.each do |message| %>
-    <%if (message.message_id == nil) || (message.message_id == message.post_id)%>
-    <div><br>
-    <img src="assets/thumb_profile.jpg" alt="">
-      <a class="submit_btn" style="margin:0" href="<%= reply_message_path(message)%>"><%= message.sender.name%></a><p>
-     Subject: 
-     <% if message.is_read %>
-      <%= message.subject  %>
-     <% else %>
-     <b><%= message.subject  %></b>
-     <% end %>
-    </div>
-    <% end %>
-   <% end %>
+
+		</td>
+		<td valign='top'>
+			<div style="width:40%;text-align:center"><h4>Message</h4></div>
+
+ 			<p id="notice"><%= notice %></p>
+			<div id="refresh_msg">
+			</div>	
+
+			<%= render 'reply'%>
+
+   
+ 		</td>
+	</tr>
+</table>
+
 <% end %>
-  
 
 
 
+<script>
 
+	jQuery(document).ready(function() {
+		jQuery("#refresh_msg").load('<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
+
+	});
+
+	var refreshId = setInterval(function()
+	{
+	     $('#responsecontainer').fadeOut("slow").load('<%= refresh_part_messages_path%>').fadeIn("slow");
+	}, 10000);
+</script>
+<script>
+	var refresmsg_hId = setInterval(function()
+	{
+	     $('#refresh_msg').load('<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}")%>');
+	}, 10000);
+	</script>
+
+
+	<script>
+
+	jQuery(document).ready(function() {
+		jQuery("#user_msg").load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
+
+	});
+
+</script>
+<script>
+	var refresmsg_hId = setInterval(function()
+	{
+	     $('#user_msg').load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}")%>');
+	}, 10000);
+</script>
