--- a/app/views/messages/reply.html.erb
+++ b/app/views/messages/reply.html.erb
@@ -1,18 +1,39 @@
+ 
+ 
 
- <div style="width:40%;"><h4>Message</h4></div>
 
-<p id="notice"><%= notice %></p>
+<table style='border-spacing: 40px;border-collapse: separate;height:100%;'><tr><td valign='top'>
+Users	
+<div class="menu_simple">
+
+<ul>
+<% @user_messages.each do |user_messages|%>	
+<li>
+<img src="assets/thumb_profile.jpg" alt="">	
+ <a style="margin:0" href="<%= reply_message_path(@messagee,:recv_id =>user_messages.sender_id)%>"><%= user_messages.sender.name %><%= user_messages.sender.last_name %></a><p>
+<% end %>
+  
+</ul>
+</div>
+
+
+</td><td valign='top'>
+ <div style="width:40%;text-align:center"><h4>Message</h4></div>
+
+ <p id="notice"><%= notice %></p>
 <br>
-
+<% @total_messages.each do |messages|%>
 <p>
-  <b>Subject</b>: <%= @messageee.subject %><br/><br/>
-    <% msg1 = [] %>
-      <% @msgs.each do |i| %>
-      <b> <%= i.sender.name %> </b>:
-          <%= i.body %><br/>
-          <% msg1 << i.id%>
-      <% end %>
+    
+     
+      <b> <%= messages.sender.name %> </b>:
+          <%= messages.body %><br/> <%= messages.created_at.strftime("%e %b %Y %H:%M:%S%p") %>
+        
+     
 
 </p>
-
+<% end %>
 <%= render 'reply'%>
+
+   
+ </td></tr></table>
