facebook congiguration change

--- a/app/views/posts/mutual.html.erb
+++ b/app/views/posts/mutual.html.erb
@@ -1,12 +1,12 @@
 
 
 
-<% @mutual = @graph.get_object("me") rescue nil%>
+<% @mutual = @graph.get_object("me") %>
 
- <% @mutual_friends = @graph1.get_connections("me", "mutualfriends/#{@mutual["id"]}") rescue nil%>
+ <% @mutual_friends = @graph1.get_connections("me", "mutualfriends/#{@mutual["id"]}")%>
 
- <p>You have <%= @mutual_friends.count rescue nil%> friends in common</p>
+ <p>You have <%= @mutual_friends.count%> friends in common</p>
 
 <% @mutual_friends.each do |mutual_friends|%>
-  <p> <%= image_tag "http://graph.facebook.com/#{mutual_friends['id']}/picture", :class => 'float-left' rescue nil%> <%= mutual_friends['name']rescue nil %></p>
+  <p> <%= image_tag "http://graph.facebook.com/#{mutual_friends['id']}/picture", :class => 'float-left' %> <%= mutual_friends['name'] %></p>
 <% end %>
